--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1217,4 +1217,5 @@ run -b '[ -z "#{window_active}" ] && [ -z "#{version}" ] && tmux set display-tim
 #   tmux split-window "tmux show-buffer -b fpp-$1 | fpp || true; tmux delete-buffer -b fpp-$1"
 # }
 #
+run-shell ~/clone/path/resurrect.tmux
 # "$@"
